更改了一些bug和页面，当没有indices时，提示warning，当存在indices则显示存在的indices。

--- a/src/plugins/kibana/public/settings/styles/main.less
+++ b/src/plugins/kibana/public/settings/styles/main.less
@@ -78,6 +78,28 @@ kbn-settings-advanced {
   }
 }
 
+.sidebar-container {
+  .sidebar-list {
+    padding-top: 20px;
+    padding-left: 20px;
+  }
+  .sidebar-list .sidebar-list-header h6 {
+    font-size: 30px;
+  }
+  .sidebar-list ul li {
+    padding-top: 10px;
+  }
+  .sidebar-list ul .indices span {
+    padding-left: 3px;
+    font-size: 25px;
+  }
+}
+.sidebar-right {
+  padding-top: 30px;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-size: 18px;
+}
 
 kbn-settings-objects-view {
   label {
