更改了一些bug， 这样用户不能查看到管理员的页面，管理员登陆会看到管理员的相关页面。普通用户只能查看数据，管理员可以创建删除indices

--- a/src/plugins/kibana/public/settings/styles/main.less
+++ b/src/plugins/kibana/public/settings/styles/main.less
@@ -89,6 +89,10 @@ kbn-settings-advanced {
   .sidebar-list ul li {
     padding-top: 10px;
   }
+  .sidebar-list ul li .no-indices {
+    padding-left: 3px;
+    font-size: 25px;
+  }
   .sidebar-list ul .indices span {
     padding-left: 3px;
     font-size: 25px;
